 - LuaUnitScript: optionally make Turn and Move insta-update piece matrices (pass "true" as the fifth argument)
 ! LuaSynced*: make sure ALL weapon API functions are 1-based
     UPDATE YOUR GAME'S UNIT_SCRIPT.LUA IF IT HAS LUA-SCRIPTED
     UNITS AND YOU ARE NOT USING SPRING'S (BASECONTENT) VERSION

Rendering:
 - LoadingMT: add a runtime check that should detect incompatibilities
 - disable ARB shaders with Intel/Mesa drivers (can be overridden by setting ForceEnableIntelShaderSupport=1)
 - reduce used varyings in SMF GLSL shader in the hope it will fix advmapshading on some lowend GPUs
 - render MiniMap to a texture and update it async from screen (new configtags: MiniMapRenderToTexture & MiniMapRefreshRate)

Performance:
 - use SSE in some matrix math
 - save a little mem in Pathfinder
 - reduce PFS update rate by 10%
 - little speedup in Grass rendering (it's still slow on some maps)
 - use 32bit shadowmap. ~7% faster than 24bit one, cause of better alignment
 - move Lua GC to its own callin and fix so a bug when GC was too slow to catch up and so eating >>100MB ram
 - nihiliate MiniMap usage by rendering it to a texture

Buildprocess:
 ! updated gentoo overlay url to https://github.com/springlobby/overlay
 - fix #3645 Can't build if source directory has white spaces
 ! removed VS project files / fix compile with Visual Studio 2012 Express for Windows Desktop:
    use cmake -G "Visual Studio 11" to generate project files
    dropped support for Visual Studio 8, 9 & 10
    see http://springrts.com/wiki/Building_Spring_on_Windows
 ! compile Spring as c++11
 - fix clang compile errors + some bugs detected by clang
 ! slightly refactored build system, now every target can be disabled:
     spring-dedicated, spring-headless, spring-legacy, spring-multithreaded
 - more unittests (extended FileSystem, timers, unitsync, SSE Matrix Math, ...)
 - fix some errors when running spring in-source (AI / Interfaces are still broken)

Bugfixes: